--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
             <artifactId>approvaltests</artifactId>
             <version>9.5.0</version>
         </dependency>
+		<dependency>
+			<groupId>com.larseckart</groupId>
+			<artifactId>junit-tcr-extensions</artifactId>
+			<version>0.0.1</version>
+			<scope>test</scope>
+		</dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
