--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,9 +5,10 @@ name:  mvn verify linux
 
 on:
   push:
-    branches: [ master ]
   pull_request:
-    branches: [ master ]
+  workflow_dispatch:
+  schedule:
+    - cron: '15 3 1 * *'  # <https://crontab.guru/#45_16_*_*_0> 
 
 jobs:
   build:
